syntax = "proto3";

package api;

option go_package=".;api";

enum ResultCode {
    ResultCodeFailed = 0;
    ResultCodeSuccess = 1;
}

message GlobalSession {
    enum GlobalStatus {
        Begin = 0;

        Committing = 1;

        Rollbacking = 2;

        Finished = 3;
    }


    string XID = 1;
    string ApplicationID = 2;
    int64 TransactionID = 3;
    string TransactionName = 4;
    int32 Timeout = 5;
    int64 BeginTime = 6;
    GlobalStatus Status = 7;
}

message BranchSession {
    enum BranchType {
        AT = 0;

        TCC = 1;

        SAGA = 2;

        XA = 3;
    }

    enum BranchStatus {
        Registered = 0;

        PhaseOneFailed = 1;

        PhaseTwoCommitting = 2;

        PhaseTwoRollbacking = 3;

        Complete = 4;
    }


    string BranchID = 1;
    string ApplicationID = 2;
    int64 BranchSessionID = 3;
    string XID = 4 ;
    int64 TransactionID = 5;
    string ResourceID = 6;
    string LockKey = 7;
    BranchType Type = 8;
    BranchStatus Status = 9;
    bytes ApplicationData = 10;
    int64 BeginTime = 11;
}